// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelayPage:  should render page 1`] = `
<Page
  empty={Object {}}
  title="Delay Report"
>
  <Connect(Filters)
    onShare={[Function]}
    refresh={[Function]}
  />
  <MetricsSummary
    rateTitle="Delayed Rate"
    rateValue={0.1}
    relativeRange="hour"
    secondaryMessage="10 were delayed on first attempt."
  >
    <strong>
      10
    </strong>
     of your messages were delayed of 
    <strong>
      10,000
    </strong>
     messages accepted
  </MetricsSummary>
  <Panel
    className="ReasonsTable"
    title="Delayed Messages"
  >
    <DelaysDataTable
      onDomainClick={[Function]}
      rows={
        Array [
          Object {
            "count_delayed": 100,
            "count_delayed_first": 1,
            "reason": "my reason",
          },
        ]
      }
      totalAccepted={1000}
    />
  </Panel>
  <ShareModal
    handleToggle={[Function]}
    open={false}
    query={Object {}}
  />
</Page>
`;

exports[`DelayPage:  should show loading indicator when loading table 1`] = `
<Page
  empty={Object {}}
  title="Delay Report"
>
  <withRouter(Connect(Filters))
    reportLoading={true}
  />
  <Connect(MetricsSummary)
    rateTitle="Delayed Rate"
    rateValue={0.1}
    secondaryMessage="10 were delayed on first attempt."
  >
    <strong>
      10
    </strong>
     of your messages were delayed of 
    <strong>
      10,000
    </strong>
     messages accepted
  </Connect(MetricsSummary)>
  <Panel
    className="ReasonsTable"
    title="Delayed Messages"
  >
    <PanelLoading
      minHeight="400px"
    />
  </Panel>
</Page>
`;

exports[`DelayPage:  should show loading panel when aggregates are still loading 1`] = `
<Page
  empty={Object {}}
  title="Delay Report"
>
  <withRouter(Connect(Filters)) />
  <PanelLoading
    minHeight="115px"
  />
  <Panel
    className="ReasonsTable"
    title="Delayed Messages"
  >
    <DelaysDataTable
      addFilters={[MockFunction]}
      rows={
        Array [
          Object {
            "count_delayed": 100,
            "count_delayed_first": 1,
            "reason": "my reason",
          },
        ]
      }
      totalAccepted={1000}
    />
  </Panel>
</Page>
`;
